2008-03-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATtiny167.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/sleep.h: Ditto.
	* include/avr/iotn167.h: New file.
	* NEWS: Add new device to list.
	* doc/api/main_page.dox: Add xmega devices to documentation.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Fix macro for ATmega32M1, ATmega32C1.
	* include/avr/sleep.h: Reformat some #ifdefs.

2008-03-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* tests/simulate/runtest.sh: Moving failed testcases: Replace -T with -f,
	replace dot with underscore.

2008-03-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* tests/simulate/runtest.sh: Fix moving failed testcases. Add printing
	of location and version of avr-gcc used for tests.

2008-03-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for XMEGA, ATxmega128A1, ATxmega64A1.
	* crt1/gcrt1.S: Ditto.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/common.h: Ditto.
	* include/avr/io.h: Ditto.
	* libc/stdlib/stdlib_private.h: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/sleep.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iox128a1.h: New file.
	* include/avr/iox64a1.h: New file.
	* NEWS: Add news.

2008-03-24  Dmitry Xmelkov  <dmix@gmail.ru>

	Optimize setjmp() in space. Use __AVR_3_BYTE_PC__ macro.
	* include/setjmp.h: Reduce size of jmp_buf by 2/1 bytes.
	* libc/stdlib/setjmp.S: Reduce size of jmp_buf by 2/1 bytes. Rewrite
	the setjmp() to save flash. Use __AVR_3_BYTE_PC__ to determine the
	size of return address (vs EIND register presence). Add common
	assembler pseudos: .type, .size .
	* tests/simulate/regression/20080323-jmpbuf.c: New file.