@@ -1,3 +1,10 @@
+2008-03-26  Eric B. Weddington  <eric.weddington@atmel.com>
+
+	* include/avr/iox128a1.h: Fix constants, add fuse, lockbit information.
+	* include/avr/iox64a1.h: Ditto.
+	* include/avr/fuse.h: Add documentation about fuse default value macros.
+	* include/avr/lock.h: Add new lockbit groups and values for XMEGA.
+
 2008-03-25  Eric B. Weddington  <eric.weddington@atmel.com>
 
 	* configure.ac: Add support for ATtiny167.
